# FastAPITestTask

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.env  docker-compose.yml  pyproject.toml  scripts.py
alembic/: env.py
alembic/versions/: 330ace93608b_update_fields.py  6c6bd9aec543_create_models.py  b3119898c945_update_fields.py  e192e72f6f24_init_db.py
docker/test/: docker-compose.yml
src/: config.py  database.py  main.py
src/app/: dependencies.py  router.py  schemas.py  service.py
src/app/models/: __init__.py  customers.py  orders.py  trade_point.py  visits.py  workers.py
tests.py/: test_worker.py
